[gd_scene load_steps=13 format=2]

[ext_resource path="res://pickups/EnergyPickup/EnergyPickupSheet.png" type="Texture" id=1]
[ext_resource path="res://pickups/EnergyPickup/EnergyPickup.gd" type="Script" id=2]
[ext_resource path="res://utils/Plane2DMovementHelper.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.3, 1 )

[sub_resource type="AtlasTexture" id=2]
flags = 16
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=3]
flags = 16
atlas = ExtResource( 1 )
region = Rect2( 30, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=4]
flags = 16
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=5]
flags = 16
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=6]
flags = 16
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=7]
flags = 16
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=8]
flags = 16
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 30, 30 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="EnergyPickup" type="Area"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Sprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 3, 0, 0, 0, -1.31134e-07, 1, 0, -3, -4.37114e-08, 0, 0, 0 )
opacity = 0.58
frames = SubResource( 9 )
frame = 6
playing = true

[node name="Plane2DMovementHelper" parent="." instance=ExtResource( 3 )]

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="InitMovementTimer" type="Timer" parent="."]
wait_time = 0.02
one_shot = true
